refactoring to get e2e tests back on track

--- a/deployables/app/package.json
+++ b/deployables/app/package.json
@@ -7,7 +7,7 @@
     "dev": "cross-env NODE_ENV=development node ./dev-server.js",
     "check-types": "react-router typegen && tsc -b",
     "test": "cross-env NODE_ENV=test vitest",
-    "test:e2e": "playwright test --headed",
+    "test:e2e": "PW_CHROMIUM_ATTACH_TO_OTHER=1 playwright test --headed",
     "test:e2e:ui": "pnpm test:e2e --ui",
     "lint": "eslint . --max-warnings=0"
   },
