--- a/.github/workflows/live-tests.yaml
+++ b/.github/workflows/live-tests.yaml
@@ -21,6 +21,11 @@ jobs:
           cache-dependency-path: '**/pnpm-lock.yaml'
       - name: Install dependencies
         run: pnpm install --prefer-offline
+
+      - name: Build extension
+        run: pnpm build
+        working-directory: ./deployables/extension
+
       - name: Install Playwright Browsers
         run: pnpm playwright install --with-deps chromium
 
