provide companion app url

--- a/.github/workflows/live-tests.yaml
+++ b/.github/workflows/live-tests.yaml
@@ -25,6 +25,8 @@ jobs:
       - name: Build extension
         run: pnpm build
         working-directory: ./deployables/extension
+        env:
+          COMPANION_APP_URL: ${{ github.event.deployment_status.target_url }}
 
       - name: Install Playwright Browsers
         run: pnpm playwright install --with-deps chromium
