pretend to be in dev mode for e2e tests for now

--- a/.github/workflows/live-tests.yaml
+++ b/.github/workflows/live-tests.yaml
@@ -27,6 +27,7 @@ jobs:
         working-directory: ./deployables/extension
         env:
           COMPANION_APP_URL: ${{ github.event.deployment_status.target_url }}
+          NODE_ENV: development
 
       - name: Install Playwright Browsers
         run: pnpm playwright install --with-deps chromium
