--- a/.github/workflows/live-tests.yaml
+++ b/.github/workflows/live-tests.yaml
@@ -31,6 +31,8 @@ jobs:
       - name: Build manifest
         run: pnpm update-manifest -v v4.0.0
         working-directory: ./deployables/extension
+        env:
+          COMPANION_APP_URL: ${{ github.event.deployment_status.target_url }}
 
       - name: Install Playwright Browsers
         run: pnpm playwright install --with-deps chromium
