--- a/deployables/landing-page/package.json
+++ b/deployables/landing-page/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "@icons-pack/react-simple-icons": "12.1.0",
     "@react-router/serve": "7.2.0",
+    "@headlessui/react": "2.2.0",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@zodiac/ui": "workspace:*",
     "isbot": "5.1.23",
     "lucide-react": "0.477.0",
+    "classnames": "2.5.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router": "7.2.0"
