adjust component imports

--- a/deployables/landing-page/tsconfig.json
+++ b/deployables/landing-page/tsconfig.json
@@ -7,13 +7,16 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "rootDirs": [".", "./.react-router/types"],
     "paths": {
-      "@/images/*": ["./src/images/*"]
+      "@/images/*": ["./images/*"],
+      "@/components": ["./components/index.ts"]
     }
   },
   "include": [
     ".react-router/types/**/*",
     "./wranger-configuration.d.ts",
-    "app",
+    "./app",
+    "./components",
+    "./images",
     "./png.d.ts"
   ]
 }
