add dynamic content to landing page

--- a/deployables/landing-page/tsconfig.json
+++ b/deployables/landing-page/tsconfig.json
@@ -13,7 +13,8 @@
   },
   "include": [
     ".react-router/types/**/*",
-    "./wranger-configuration.d.ts",
+    "./worker-configuration.d.ts",
+    "./workers",
     "./app",
     "./components",
     "./images",
