add nodejs compat

--- a/deployables/landing-page/wrangler.toml
+++ b/deployables/landing-page/wrangler.toml
@@ -1,6 +1,7 @@
 workers_dev = true
 name = "pilot-landing-page"
 compatibility_date = "2024-11-18"
+compatibility_flags = ["nodejs_compat"]
 main = "./build/server/index.js"
 assets = { directory = "./build/client/" }
 
