--- a/.github/workflows/live-tests.yaml
+++ b/.github/workflows/live-tests.yaml
@@ -8,9 +8,7 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     if: github.event.deployment_status.state == 'success'
-    defaults:
-      run:
-        working-directory: ./deployables/app
+
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
@@ -19,13 +17,27 @@ jobs:
           node-version: 22.13.1
           cache: 'pnpm'
           cache-dependency-path: '**/pnpm-lock.yaml'
+
       - name: Install dependencies
         run: pnpm install --prefer-offline
+
+      - name: Build extension
+        run: pnpm build
+        working-directory: ./deployables/extension
+
+      - name: 'Update manifest'
+        run: pnpm update-manifest
+        working-directory: ./deployables/extension
+        env:
+          COMPANION_APP_URL: ${{ github.event.deployment_status.target_url }}
+
       - name: Install Playwright Browsers
         run: pnpm playwright install --with-deps chromium
+        working-directory: ./deployables/app
 
       - name: Companion E2E
         run: xvfb-run pnpm playwright test
+        working-directory: ./deployables/app
         env:
           PLAYWRIGHT_TEST_BASE_URL: ${{ github.event.deployment_status.target_url }}
           VERCEL_PROTECTION_BYPASS: ${{ secrets.VERCEL_PROTECTION_BYPASS }}
